tests/fixtures/pass/infer_generic_struct.sali
let Cell(T: type) = struct(value: T)

let main(): i32 = Cell(_)(42).value
