tests/fixtures/fail/infer_borrow_temporary.sali
let Cell = struct(value: i32)
let read(T: type)(borrow value: T): i32 = 42

let main(): i32 = read(_)(Cell(42))
